# SimpleRenderEngine

./: .gitignore  CMakeLists.txt  main.cpp
src/: camera.cpp  camera.h  keymap.h  mesh.cpp  mesh.h  mesh_attributes.cpp  mesh_attributes.h  meshdata.cpp  meshdata.h  shader.cpp  shader.h  window.cpp  window.h
